fix height issue

--- a/app/views/home/invites.html.haml
+++ b/app/views/home/invites.html.haml
@@ -57,7 +57,7 @@
               .span4.center{style: 'line-height: 30px; font-weight: bold;'}
                 Import Contacts
               .span4
-          %div{style: "padding: 5px; background: #F9F9F9; border-top: 1px solid #ccc; border-bottom: 1px solid #ccc;"}
+          %div{style: "padding: 5px; background: #F9F9F9; border-top: 1px solid #ccc; border-bottom: 1px solid #ccc; height: 30px;"}
             .row-fluid
               - if current_user.contacts.nil?
                 %div{style: "color: #999999;"}
