--- a/app/views/home/_landing.html.haml
+++ b/app/views/home/_landing.html.haml
@@ -12,12 +12,16 @@
 					= link_to "Sign Up With Google", "/auth/google_oauth2", class: 'red'
 				%div
 					= link_to "Shoot, I don't use Google", no_google_path
-	.row
+	.row.features
 		.span3.feature
-			%h4.center.teal	Link Your Calendars
+			%h4.center.teal	Link your calendars
+			= image_tag 'step1.jpg'
 		.span3.feature
-			%h4.center.yellow Choose Activities
+			%h4.center.yellow Tell us what you like to do
+			= image_tag 'step2.jpg'
 		.span3.feature
-			%h4.center.orange Invite Friends
+			%h4.center.orange Invite friends
+			= image_tag 'step3.jpg'
 		.span3.feature
-			%h4.center.purple Make Plans
+			%h4.center.purple Find times that work
+			= image_tag 'step4.jpg'
