--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -8,6 +8,7 @@
           %strong{style: "margin-right: 20px;"}= current_user.name
         = link_to "Sign out", signout_path, id: "sign_out", class: "google_sign_in"
       - else
+        %span{style: "margin-right: 20px;"} Already have an account?
         = link_to "Sign in with Google", "/auth/google_oauth2", class: "google_sign_in"
     .clearfix
     %hr
