--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,20 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<%= include_gon %>
+	<div id="wrap">
+    <!-- Begin page content -->
+    <%= include_gon %>
 		<%= render 'layouts/navigation' %>
-		<%= yield %>			
-	</div>
+		<%= yield %>
+    <div id="push"></div>
+  </div>
+  <div id="footer">
+    <div class="container" style="position: relative;">
+    	<span id="copyright">&copy; 2013 Sandbox Industries</span>
+      <%= image_tag 'footer.jpg' %>
+    </div>
+  </div>
+
+
 </body>
 </html>
