--- a/app/assets/stylesheets/design.css.scss
+++ b/app/assets/stylesheets/design.css.scss
@@ -29,6 +29,15 @@ $footer: #97D4CD;
 	}
 }
 
+#headline {
+	font-size: 30px;
+	font-weight: 400;
+}
+
+.teal-text {
+	color: $teal;
+}
+
 #copyright {
 	position: absolute;
 	top: 28px;
