--- a/app/views/home/_landing.html.haml
+++ b/app/views/home/_landing.html.haml
@@ -2,8 +2,9 @@
 	.row
 		.span12
 			.well.center{style: "margin-top: 30px;"}
-				%h1 You want to get together with friends.  
-				%h2 Let us plan it!
+				%h1#headline
+					You want to get together with friends.  
+					%span.teal-text Let us plan it!
 				- if @invite
 					%p
 						Sign up with Google to start planning activities with 
