no-google page updates

--- a/app/assets/stylesheets/design.css.scss
+++ b/app/assets/stylesheets/design.css.scss
@@ -2,7 +2,7 @@ $teal: #21D0C1;
 $yellow: #FFD630;
 $orange: #F26921;
 $purple: #46134C;
-$footer: #97D4CD;
+$footer: #BBE4E0;
 
 body {
 	color: $purple;
