--- a/app/views/home/no-google.html.haml
+++ b/app/views/home/no-google.html.haml
@@ -1,6 +1,7 @@
 .container
 	.row
 		.span12
-			.well.center{style: "margin-top: 30px;"}
-				%h1 No Google??  
-				%h2 We're working on it!
+			.center{style: "margin-top: 30px;"}
+				%h1 Don't use Google?
+				%h4 We're currently working on connecting Jupiter with other calendars like Yahoo! and Hotmail.  Please check back soon.
+			= image_tag "no-google.jpg"
