--- a/app/assets/stylesheets/navigation.css.scss
+++ b/app/assets/stylesheets/navigation.css.scss
@@ -15,7 +15,6 @@
 	}
 	hr {
 		margin: 20px 0 0 0;
-		border-top: 1px solid #9E81A0;
 	}
 	.google_sign_in {
 		background: #454E5D;
@@ -41,4 +40,8 @@
 	color: #fff;
 	margin: 0;
 	font-weight: 100;
+}
+
+hr {
+	border-top: 1px solid #9E81A0;
 }
