--- a/app/views/home/_landing.html.haml
+++ b/app/views/home/_landing.html.haml
@@ -30,3 +30,19 @@
 					= link_to "Join Jupiter With Google", "/auth/google_oauth2", class: 'red'
 				%div
 					= link_to "Shoot, I don't use Google", no_google_path
+	%hr
+	.row
+		.span4
+			= image_tag 'iphone.jpg', style: "margin-left: 20px;"
+		.span8
+			%h4.center Jupiter will ...
+			.row-fluid{style: "margin-top: 20px;"}
+				.span4.center
+					= image_tag 'email-icon.jpg'
+					%p Describe
+				.span4.center
+					= image_tag 'rsvp-icon.jpg'
+					%p Describe
+				.span4.center
+					= image_tag 'notify-icon.jpg'
+					%p Describe
