--- a/app/views/home/_landing.html.haml
+++ b/app/views/home/_landing.html.haml
@@ -35,14 +35,14 @@
 		.span4
 			= image_tag 'iphone.jpg', style: "margin-left: 20px;"
 		.span8
-			%h4.center Jupiter will ...
-			.row-fluid{style: "margin-top: 20px;"}
+			%h4.center.light-text Jupiter will let you know when you and your friends are free to do fun things together
+			.row-fluid#pain-points
 				.span4.center
 					= image_tag 'email-icon.jpg'
-					%p Describe
+					%p Don't get stuck in email chains to make plans
 				.span4.center
 					= image_tag 'rsvp-icon.jpg'
-					%p Describe
+					%p Get the inside scoop on what's going on and who's free to join in one click
 				.span4.center
 					= image_tag 'notify-icon.jpg'
-					%p Describe
+					%p We'll notify you with an email or text message, whichever you prefer
