--- a/app/views/invitations/index.html.haml
+++ b/app/views/invitations/index.html.haml
@@ -1,25 +1,37 @@
-- if current_user
-  %h1.page-title 
-    .container
-      Your Sent Invitations
-
 = render 'layouts/messages'
-
 .container
+  = render 'home/welcome'
   .row
-    .span12
-      %h5 Your Sent Invitations
-      - if @sent_invitations.length > 0
-        %table.table
-          - @sent_invitations.each do |invitation|
-            %tr
-              %td
-                = invitation.recipient_email
-              %td
-                - if User.find_by_email(invitation.recipient_email)
-                  %span.label.label-success.pull-right Signed Up!
-                - else
-                  %span.label.label-info.pull-right Pending
-      - else
-        .well
-          You have not sent any invitations yet!
+    .span4
+      %h4.center.step.step-inactive 1. Link your calendars
+    .span4
+      %h4.center.step.step-inactive 2. Choose activities
+    .span4
+      %h4.center.step.orange 3. Invite your friends
+    .span12{style: 'border-top: 1px solid #9C81A0;'}
+      %h4 Your invitations are pending. We’ll alert you as soon as your friends join so we can start planning!
+      %p Once your friends join, you’ll be able to choose which activities to do with each friend. We’ll make suggestions based on your mutual interests and availability.
+      %table.table.table-striped.no-margin
+        %thead
+          %th Email
+          %th.pull-right Status
+      .slimscroll
+        - if @sent_invitations.length > 0
+          %table.table.table-striped.no-margin
+            - @sent_invitations.each do |invitation|
+              %tr
+                %td
+                  = invitation.recipient_email
+                %td
+                  - if User.find_by_email(invitation.recipient_email)
+                    %span.label.label-success.pull-right Signed Up!
+                  - else
+                    %span.label.label-info.pull-right Pending
+        - else
+          .well
+            You have not sent any invitations yet!
+      %div{style: 'margin: 10px 0;'}
+        = link_to "Check out Jupiter's Features", signout_path, class: "btn btn-warning pull-right", id: "send-invites"
+        = link_to "Invite more friends", '/invite_friends', class: 'btn pull-right', style: "margin-right: 15px;"
+        = link_to "Questions? Email us at hello@jupiterapp.com", "mailto:hello@jupiterapp.com", class: "btn btn-link orange-text pull-right"
+        .clearfix
