--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,4 @@
+$orange: #F26921;
 @import "bootstrap";
 @import "design";
 @import "home";
@@ -11,6 +12,12 @@
 
 .flash {
 	margin-bottom: 0px!important;
+	position: absolute;
+	top: -2px;
+	left: 50%;
+	width: 250px;
+	margin-left: -125px!important;
+	text-align: center;
 }
 
 .table-striped tbody > tr:nth-child(odd) > td, .table-striped tbody > tr:nth-child(odd) > th {
