--- a/app/views/home/no-google.html.haml
+++ b/app/views/home/no-google.html.haml
@@ -2,6 +2,6 @@
 	.row
 		.span12
 			.center{style: "margin-top: 30px;"}
-				%h1 Don't use Google?
-				%h4 We're currently working on connecting Jupiter with other calendars like Yahoo! and Hotmail.  Please check back soon.
+				%h1{style: "margin-bottom: 0;"} Don't use Google?
+				%h4{style: "margin: 40px 0;"} We're currently working on connecting Jupiter with other calendars like Yahoo! and Hotmail.  Please check back soon.
 			= image_tag "no-google.jpg"
