--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,14 +1,14 @@
 #user_nav
   .container
     .logo.pull-left= link_to image_tag('jupiter-logo.png', alt: "Jupiter"), root_url
-    .pull-right{style: "margin-top: 7px;"}
+    %h5.pull-right{style: "margin-top: 7px;"}
       - if current_user
-        Signed in as
+        Hello,
         = succeed "" do
-          %strong{style: "margin-right: 20px;"}= current_user.name
-        = link_to "Sign out", signout_path, id: "sign_out", class: "google_sign_in"
+          %span{style: "margin-right: 20px;"}= current_user.name
+        = link_to "Sign out", signout_path, id: "sign_out", class: "btn btn-warning"
       - else
         %span{style: "margin-right: 20px;"} Already have an account?
-        = link_to "Sign in with Google", "/auth/google_oauth2", class: "google_sign_in"
+        = link_to "Sign in with Google", "/auth/google_oauth2", class: "btn btn-warning"
     .clearfix
     %hr
