--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div id="footer">
     <div class="container" style="position: relative;">
-    	<span id="copyright">&copy; 2013 Sandbox Industries</span>
+    	<span id="copyright">&copy; 2013 Jupiter</span>
       <%= image_tag 'footer.jpg' %>
     </div>
   </div>
