start styling email

--- a/app/views/mailer/invitation.html.erb
+++ b/app/views/mailer/invitation.html.erb
@@ -133,7 +133,7 @@ html {width: 100%; }
 										</tr>
 										<tr>
 											<td height="50">
-												<a class="main-logo" href="<%= @signup_url %>">Jupiter</a>
+												<a class="main-logo" href="<%= @signup_url %>"><%= image_tag attachments['jupiter-logo.png'].url %></a>
 											</td>
 										</tr>
 										<tr>
@@ -205,7 +205,7 @@ html {width: 100%; }
 											<td width="345" style="font-size: 14px; color: #cacaca; text-align: left; font-weight: light; font-family: Helvetica, Arial, sans-serif; line-height: 24px; text-shadow: 1px 1px 2px #000;" class="crop2">
 											The only tool you will ever need to plan activities with your friends.<br><br>
 											
-											<a class="signup-button" href="<%= @signup_url %>">Accept Invitation</a>
+											<a class="signup-button" href="<%= @signup_url %>"><%= image_tag attachments['accept-invite.jpg'].url %></a>
 																			
 											</td> 
 										</tr>
@@ -326,15 +326,15 @@ html {width: 100%; }
 						<table width="580" border="0" cellpadding="0" cellspacing="0" align="center">
 							<tbody><tr>
 								<td width="75" height="75" bgcolor="#2b2e3b" style="text-align: center; border-radius: 100%;" class="roundIcons">
-									<center><a href="<%= @signup_url %>"><img src="images/icon_1.jpg" alt="" border="0" style="display: block;"></a></center>
+									<center><a href="<%= @signup_url %>"><%= image_tag attachments['step1.jpg'].url %></a></center>
 								</td>
 								<td width="175" bgcolor="#fafafa" class="scalePad"></td>
 								<td width="75" height="75" bgcolor="#2b2e3b" style="text-align: center; border-radius: 100%;">
-									<center><a href="<%= @signup_url %>"><img src="images/icon_2.jpg" alt="" border="0" style="display: block;"></a></center>
+									<center><a href="<%= @signup_url %>"><%= image_tag attachments['step2.jpg'].url %></a></center>
 								</td>
 								<td width="175" bgcolor="#fafafa" class="scalePad"></td>
 								<td width="75" height="75" bgcolor="#2b2e3b" style="text-align: center; border-radius: 100%;">
-									<center><a href="<%= @signup_url %>"><img src="images/icon_3.jpg" alt="" border="0" style="display: block;"></a></center>
+									<center><a href="<%= @signup_url %>"><%= image_tag attachments['step3.jpg'].url %></a></center>
 								</td>
 							</tr>
 						</tbody></table>
@@ -370,7 +370,7 @@ html {width: 100%; }
 													<tbody><tr>
 														<td width="263">
 														
-															<a href="<%= @signup_url %>"><img width="263" height="149" src="images/image_1.jpg" alt="" border="0" style="width: 263px; height: 149px; display: block; border-radius: 5px;" class="imageScale1"></a>
+															<a href="<%= @signup_url %>"><%= image_tag attachments['step1-large.jpg'].url %></a>
 														</td>
 													</tr>
 													<tr>
@@ -458,7 +458,7 @@ html {width: 100%; }
 													<tbody><tr>
 														<td width="263">
 														
-															<a href="<%= @signup_url %>"><img width="263" height="149" src="images/image_2.jpg" alt="" border="0" style="width: 263px; height: 149px; display: block; border-radius: 5px;" class="imageScale1"></a>
+															<a href="<%= @signup_url %>"><%= image_tag attachments['step2-large.jpg'].url %></a>
 														</td>
 													</tr>
 													<tr>
@@ -546,7 +546,7 @@ html {width: 100%; }
 													<tbody><tr>
 														<td width="263">
 														
-															<a href="<%= @signup_url %>"><img width="263" height="149" src="images/image_3.jpg" alt="" border="0" style="width: 263px; height: 149px; display: block; border-radius: 5px;" class="imageScale1"></a>
+															<a href="<%= @signup_url %>"><%= image_tag attachments['step3-large.jpg'].url %></a>
 														</td>
 													</tr>
 													<tr>
