--- a/app/views/mailer/invitation.html.erb
+++ b/app/views/mailer/invitation.html.erb
@@ -167,7 +167,7 @@ html {width: 100%; }
 			<!-- Header -->
 			<table width="100%" class="fullWidth" border="0" cellpadding="0" cellspacing="0" align="center">
 				<tbody><tr>
-					<td width="100%" bgcolor="#2b2e3b" background="images/header_b.jpg" style="text-align: center; background-repeat: no-repeat; background-size: 100% 100%">
+					<td width="100%" bgcolor="#FEF1BD" background="images/header_b.jpg" style="text-align: center; background-repeat: no-repeat; background-size: 100% 100%">
 					
 						<!-- Space -->
 						<table width="580" border="0" cellpadding="0" cellspacing="0" align="center">
@@ -325,15 +325,15 @@ html {width: 100%; }
 						
 						<table width="580" border="0" cellpadding="0" cellspacing="0" align="center">
 							<tbody><tr>
-								<td width="75" height="75" bgcolor="#2b2e3b" style="text-align: center; border-radius: 100%;" class="roundIcons">
+								<td width="75" height="75" bgcolor="#FAFAFA" style="text-align: center; border-radius: 100%;" class="roundIcons">
 									<center><a href="<%= @signup_url %>"><%= image_tag attachments['step1.jpg'].url %></a></center>
 								</td>
 								<td width="175" bgcolor="#fafafa" class="scalePad"></td>
-								<td width="75" height="75" bgcolor="#2b2e3b" style="text-align: center; border-radius: 100%;">
+								<td width="75" height="75" bgcolor="#FAFAFA" style="text-align: center; border-radius: 100%;">
 									<center><a href="<%= @signup_url %>"><%= image_tag attachments['step2.jpg'].url %></a></center>
 								</td>
 								<td width="175" bgcolor="#fafafa" class="scalePad"></td>
-								<td width="75" height="75" bgcolor="#2b2e3b" style="text-align: center; border-radius: 100%;">
+								<td width="75" height="75" bgcolor="#FAFAFA" style="text-align: center; border-radius: 100%;">
 									<center><a href="<%= @signup_url %>"><%= image_tag attachments['step3.jpg'].url %></a></center>
 								</td>
 							</tr>
@@ -623,14 +623,14 @@ html {width: 100%; }
 					</td>
 				</tr>
 				<tr>
-					<td bgcolor="#2b2e3d" width="100%" style="font-size: 0;line-height: 0;border-collapse: collapse;" class="fullWidth">
+					<td bgcolor="#ADDEDA" width="100%" style="font-size: 0;line-height: 0;border-collapse: collapse;" class="fullWidth">
 						<p style="height: 30px;">
 							&nbsp;
 						</p>
 					</td>
 				</tr>
 				<tr> 
-					<td bgcolor="#2b2e3d" width="100%" height="10" style="font-size: 0;line-height: 0;border-collapse: collapse;" class="fullWidth">
+					<td bgcolor="#ADDEDA" width="100%" height="10" style="font-size: 0;line-height: 0;border-collapse: collapse;" class="fullWidth">
 					</td>
 				</tr>
 			</tbody></table>
@@ -640,7 +640,7 @@ html {width: 100%; }
 			<table width="100%" class="fullWidth" border="0" cellpadding="0" cellspacing="0" align="center">
 				
 				<tbody><tr>
-					<td width="100%" bgcolor="#2b2e3d">
+					<td width="100%" bgcolor="#ADDEDA">
 					
 						
 						
