fix email font color

--- a/app/views/mailer/invitation.html.erb
+++ b/app/views/mailer/invitation.html.erb
@@ -194,7 +194,7 @@ html {width: 100%; }
 									<!-- Headline -->
 									<table border="0" cellpadding="0" cellspacing="0" align="left" class="crop1">
 										<tbody><tr>
-											<td width="345" style="font-size: 30px; color: #f1f1f1; text-align: left; font-weight: light; font-family: Helvetica, Arial, sans-serif; line-height: 38px; text-shadow: 1px 1px 2px #000;" class="crop1">
+											<td width="345" style="font-size: 30px; color: #48124C; text-align: left; font-weight: light; font-family: Helvetica, Arial, sans-serif; line-height: 38px; text-shadow: 1px 1px 2px #000;" class="crop1">
 												<%= @invitation.sender.name %> has invited you to Jupiter!
 											</td>
 										</tr>
@@ -202,7 +202,7 @@ html {width: 100%; }
 											<td width="345" height="8"></td>
 										</tr>
 										<tr>
-											<td width="345" style="font-size: 14px; color: #cacaca; text-align: left; font-weight: light; font-family: Helvetica, Arial, sans-serif; line-height: 24px; text-shadow: 1px 1px 2px #000;" class="crop2">
+											<td width="345" style="font-size: 14px; color: #48124C; text-align: left; font-weight: light; font-family: Helvetica, Arial, sans-serif; line-height: 24px; text-shadow: 1px 1px 2px #000;" class="crop2">
 											The only tool you will ever need to plan activities with your friends.<br><br>
 											
 											<a class="signup-button" href="<%= @signup_url %>"><%= image_tag attachments['accept-invite.jpg'].url %></a>
