update email copy

--- a/app/views/mailer/invitation.html.erb
+++ b/app/views/mailer/invitation.html.erb
@@ -203,7 +203,7 @@ html {width: 100%; }
 										</tr>
 										<tr>
 											<td width="345" style="font-size: 14px; color: #48124C; text-align: left; font-weight: light; font-family: Helvetica, Arial, sans-serif; line-height: 24px; text-shadow: 1px 1px 2px #000;" class="crop2">
-											The only tool you will ever need to plan activities with your friends.<br><br>
+											The best tool for planning activities with your busiest friends.<br><br>
 											
 											<a class="signup-button" href="<%= @signup_url %>"><%= image_tag attachments['accept-invite.jpg'].url %></a>
 																			
@@ -259,7 +259,7 @@ html {width: 100%; }
 										</tr>
 										<tr>
 											<td height="50" style="font-size: 30px; color: #2b2e3b; text-align: center; font-weight: light; font-family: Helvetica, Arial, sans-serif; line-height: 38px;" class="threeFeatures">
-												<span style="color: #f17366; font-weight: bold; text-decoration: none;">Three</span> steps to get started.
+												<span style="color: #f17366; font-weight: bold; text-decoration: none;">Three</span> steps to get started making plans.
 											</td>
 										</tr>
 										<tr>
@@ -271,7 +271,7 @@ html {width: 100%; }
 									<table border="0" cellpadding="0" cellspacing="0" align="center">
 										<tbody><tr>
 											<td height="50" style="font-size: 21px; color: #505050; text-align: center; font-weight: 100; font-family: Helvetica, Arial, sans-serif; line-height: 30px;" class="crop3">
-												We believe in software that is easy to use. Start planning activities with your busy friends quickly.
+												We want to make life easier, not harder. Signup takes just five minutes – then you’re ready for dinner, drinks, playdates and more!
 											</td>
 										</tr>
 										<tr>
@@ -412,7 +412,8 @@ html {width: 100%; }
 													</tr>
 													<tr>
 														<td width="263" style="font-size: 14px; color: #787878; text-align: left; font-weight: 100; font-family: Helvetica, Arial, sans-serif; line-height: 24px;">
-															Curabitur blandit  <span style="text-decoration: none; color: #f17366; font-weight: bold;">tempus porttitor</span>. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+															Connect your calendars to Jupiter so we know when you’re available. We’ll never share your information publicly.
+															<!-- Curabitur blandit  <span style="text-decoration: none; color: #f17366; font-weight: bold;">tempus porttitor</span>. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. -->
 															<br><br>
 														</td>
 													</tr>
@@ -500,7 +501,8 @@ html {width: 100%; }
 													</tr>
 													<tr>
 														<td width="263" style="font-size: 14px; color: #787878; text-align: left; font-weight: 100; font-family: Helvetica, Arial, sans-serif; line-height: 24px;">
-															Curabitur blandit  <span style="text-decoration: none; color: #f17366; font-weight: bold;">tempus porttitor</span>. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+															<!-- Curabitur blandit  <span style="text-decoration: none; color: #f17366; font-weight: bold;">tempus porttitor</span>. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. -->
+															Select the activities you love to do with friends. You can even match activities to certain friends.
 															<br><br>
 														</td>
 													</tr>
@@ -588,7 +590,8 @@ html {width: 100%; }
 													</tr>
 													<tr>
 														<td width="263" style="font-size: 14px; color: #787878; text-align: left; font-weight: 100; font-family: Helvetica, Arial, sans-serif; line-height: 24px;">
-															Curabitur blandit  <span style="text-decoration: none; color: #f17366; font-weight: bold;">tempus porttitor</span>. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+															<!-- Curabitur blandit  <span style="text-decoration: none; color: #f17366; font-weight: bold;">tempus porttitor</span>. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. -->
+															Send invitations of your own to the friends you want to make plans with. We’ll do the rest.
 															<br><br>  
 														</td>
 													</tr>
