fix logo image url in email

--- a/app/views/mailer/invitation.html.erb
+++ b/app/views/mailer/invitation.html.erb
@@ -133,7 +133,7 @@ html {width: 100%; }
 										</tr>
 										<tr>
 											<td height="50">
-												<a class="main-logo" href="<%= @signup_url %>"><%= image_tag attachments['jupiter-logo.png'].url %></a>
+												<a class="main-logo" href="<%= @signup_url %>"><%= image_tag attachments['logo.jpg'].url %></a>
 											</td>
 										</tr>
 										<tr>
