--- a/app/assets/stylesheets/design.css.scss
+++ b/app/assets/stylesheets/design.css.scss
@@ -5,7 +5,7 @@ $purple: #46134C;
 $footer: #BBE4E0;
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Noto Sans', sans-serif;
+	font-family: 'Lato', sans-serif;
 }
 
 .btn {
