remove text shadow and fix footer color in email

--- a/app/views/mailer/invitation.html.erb
+++ b/app/views/mailer/invitation.html.erb
@@ -194,7 +194,7 @@ html {width: 100%; }
 									<!-- Headline -->
 									<table border="0" cellpadding="0" cellspacing="0" align="left" class="crop1">
 										<tbody><tr>
-											<td width="345" style="font-size: 30px; color: #48124C; text-align: left; font-weight: light; font-family: Helvetica, Arial, sans-serif; line-height: 38px; text-shadow: 1px 1px 2px #000;" class="crop1">
+											<td width="345" style="font-size: 30px; color: #48124C; text-align: left; font-weight: light; font-family: Helvetica, Arial, sans-serif; line-height: 38px;" class="crop1">
 												<%= @invitation.sender.name %> has invited you to Jupiter!
 											</td>
 										</tr>
@@ -202,7 +202,7 @@ html {width: 100%; }
 											<td width="345" height="8"></td>
 										</tr>
 										<tr>
-											<td width="345" style="font-size: 14px; color: #48124C; text-align: left; font-weight: light; font-family: Helvetica, Arial, sans-serif; line-height: 24px; text-shadow: 1px 1px 2px #000;" class="crop2">
+											<td width="345" style="font-size: 14px; color: #48124C; text-align: left; font-weight: light; font-family: Helvetica, Arial, sans-serif; line-height: 24px;" class="crop2">
 											The best tool for planning activities with your busiest friends.<br><br>
 											
 											<a class="signup-button" href="<%= @signup_url %>"><%= image_tag attachments['accept-invite.jpg'].url %></a>
@@ -660,7 +660,7 @@ html {width: 100%; }
 							</td>
 						</tr>
 						<tr>
-							<td bgcolor="#2b2e3d" width="100%" style="font-size: 0;line-height: 0;border-collapse: collapse;" class="fullWidth">
+							<td bgcolor="#ADDEDA" width="100%" style="font-size: 0;line-height: 0;border-collapse: collapse;" class="fullWidth">
 								<p style="height: 20px;">
 									&nbsp;
 								</p>
