--- a/app/views/mailer/invitation.html.erb
+++ b/app/views/mailer/invitation.html.erb
@@ -125,37 +125,8 @@ html {width: 100%; }
 						<table width="580" border="0" cellpadding="0" cellspacing="0" align="center">
 							<tbody><tr>
 								<td width="580">
-									
-									<!-- Logo -->
-									<table border="0" cellpadding="0" cellspacing="0" align="left" class="mobileCenter">
-										<tbody><tr>
-											<td height="12"></td>
-										</tr>
-										<tr>
-											<td height="50">
-												<a class="main-logo" href="<%= @signup_url %>"><%= image_tag attachments['logo.jpg'].url %></a>
-											</td>
-										</tr>
-										<tr>
-											<td height="12" class="eraseForMobile"></td>
-										</tr>
-									</tbody></table>
-									
-									<!-- Nav -->
-									<table border="0" cellpadding="0" cellspacing="0" align="right">
-										<tbody><tr>
-											<td height="12" class="eraseForMobile"></td>
-										</tr>
-										<tr>
-											<td width="460" height="50" class="mobileCenter" style="font-size: 12px; color: #272727; font-weight: bold; text-align: right; font-family: Helvetica, Arial, sans-serif; line-height: 20px; vertical-align: middle;">
-												<a href="<%= @signup_url %>" class="navPad" style="text-decoration: none; color: #272727;">Sign Up</a>
-											</td>
-										</tr>
-										<tr>
-											<td height="12"></td>
-										</tr>
-									</tbody></table>
-																	
+									<a class="main-logo" href="<%= @signup_url %>"><%= image_tag attachments['logo.jpg'].url, style: 'float: left; margin: 15px 0;' %></a>
+									<a href="<%= @signup_url %>" class="navPad" style="text-decoration: none; color: #272727; font-weight: bold; margin: 25px 0;">Sign Up</a>
 								</td>
 							</tr>
 						</tbody></table><!-- End Nav -->
