add float to sign up link in email header

--- a/app/views/mailer/invitation.html.erb
+++ b/app/views/mailer/invitation.html.erb
@@ -126,7 +126,7 @@ html {width: 100%; }
 							<tbody><tr>
 								<td width="580">
 									<a class="main-logo" href="<%= @signup_url %>"><%= image_tag attachments['logo.jpg'].url, style: 'float: left; margin: 15px 0;' %></a>
-									<a href="<%= @signup_url %>" class="navPad" style="text-decoration: none; color: #272727; font-weight: bold; margin: 25px 0;">Sign Up</a>
+									<a href="<%= @signup_url %>" class="navPad" style="text-decoration: none; color: #272727; float: right; font-weight: bold; margin: 25px 0;">Sign Up</a>
 								</td>
 							</tr>
 						</tbody></table><!-- End Nav -->
