--- a/app/views/mailer/invitation.html.erb
+++ b/app/views/mailer/invitation.html.erb
@@ -174,7 +174,7 @@ html {width: 100%; }
 										</tr>
 										<tr>
 											<td width="345" style="font-size: 14px; color: #48124C; text-align: left; font-weight: light; font-family: Helvetica, Arial, sans-serif; line-height: 24px;" class="crop2">
-											The best tool for planning activities with your busiest friends.<br><br>
+											The best tool for planning activities with your busiest friends.  Scroll down to learn more about Jupiter!<br><br>
 											
 											<a class="signup-button" href="<%= @signup_url %>"><%= image_tag attachments['accept-invite.jpg'].url %></a>
 																			
@@ -384,6 +384,8 @@ html {width: 100%; }
 													<tr>
 														<td width="263" style="font-size: 14px; color: #787878; text-align: left; font-weight: 100; font-family: Helvetica, Arial, sans-serif; line-height: 24px;">
 															Connect your calendars to Jupiter so we know when you’re available. We’ll never share your information publicly.
+															<br>
+															<a class="signup-button" href="<%= @signup_url %>"><%= image_tag attachments['accept-invite.jpg'].url %></a>
 															<!-- Curabitur blandit  <span style="text-decoration: none; color: #f17366; font-weight: bold;">tempus porttitor</span>. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. -->
 															<br><br>
 														</td>
@@ -474,6 +476,8 @@ html {width: 100%; }
 														<td width="263" style="font-size: 14px; color: #787878; text-align: left; font-weight: 100; font-family: Helvetica, Arial, sans-serif; line-height: 24px;">
 															<!-- Curabitur blandit  <span style="text-decoration: none; color: #f17366; font-weight: bold;">tempus porttitor</span>. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. -->
 															Select the activities you love to do with friends. You can even match activities to certain friends.
+															<br>
+															<a class="signup-button" href="<%= @signup_url %>"><%= image_tag attachments['accept-invite.jpg'].url %></a>
 															<br><br>
 														</td>
 													</tr>
@@ -563,6 +567,8 @@ html {width: 100%; }
 														<td width="263" style="font-size: 14px; color: #787878; text-align: left; font-weight: 100; font-family: Helvetica, Arial, sans-serif; line-height: 24px;">
 															<!-- Curabitur blandit  <span style="text-decoration: none; color: #f17366; font-weight: bold;">tempus porttitor</span>. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. -->
 															Send invitations of your own to the friends you want to make plans with. We’ll do the rest.
+															<br>
+															<a class="signup-button" href="<%= @signup_url %>"><%= image_tag attachments['accept-invite.jpg'].url %></a>
 															<br><br>  
 														</td>
 													</tr>
