improve email styling

--- a/app/views/mailer/invitation.html.erb
+++ b/app/views/mailer/invitation.html.erb
@@ -385,7 +385,7 @@ html {width: 100%; }
 														<td width="263" style="font-size: 14px; color: #787878; text-align: left; font-weight: 100; font-family: Helvetica, Arial, sans-serif; line-height: 24px;">
 															Connect your calendars to Jupiter so we know when you’re available. We’ll never share your information publicly.
 															<br>
-															<a class="signup-button" href="<%= @signup_url %>"><%= image_tag attachments['accept-invite.jpg'].url %></a>
+															<a class="signup-button" href="<%= @signup_url %>"><%= image_tag attachments['accept-invite.jpg'].url, style: 'margin-top: 10px; height: 75%;' %></a>
 															<!-- Curabitur blandit  <span style="text-decoration: none; color: #f17366; font-weight: bold;">tempus porttitor</span>. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. -->
 															<br><br>
 														</td>
@@ -477,7 +477,7 @@ html {width: 100%; }
 															<!-- Curabitur blandit  <span style="text-decoration: none; color: #f17366; font-weight: bold;">tempus porttitor</span>. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. -->
 															Select the activities you love to do with friends. You can even match activities to certain friends.
 															<br>
-															<a class="signup-button" href="<%= @signup_url %>"><%= image_tag attachments['accept-invite.jpg'].url %></a>
+															<a class="signup-button" href="<%= @signup_url %>"><%= image_tag attachments['accept-invite.jpg'].url, style: 'margin-top: 10px; height: 75%;' %></a>
 															<br><br>
 														</td>
 													</tr>
@@ -568,7 +568,7 @@ html {width: 100%; }
 															<!-- Curabitur blandit  <span style="text-decoration: none; color: #f17366; font-weight: bold;">tempus porttitor</span>. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. -->
 															Send invitations of your own to the friends you want to make plans with. We’ll do the rest.
 															<br>
-															<a class="signup-button" href="<%= @signup_url %>"><%= image_tag attachments['accept-invite.jpg'].url %></a>
+															<a class="signup-button" href="<%= @signup_url %>"><%= image_tag attachments['accept-invite.jpg'].url, style: 'margin-top: 10px; height: 75%;' %></a>
 															<br><br>  
 														</td>
 													</tr>
