--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Jupiter</title>
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <link rel="shortcut icon" href="favicon.png">
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
