update email address, favicon

--- a/app/assets/stylesheets/design.css.scss
+++ b/app/assets/stylesheets/design.css.scss
@@ -19,6 +19,9 @@ body {
 .light-text {
 	font-weight: normal;
 }
+.teal, .yellow, .orange, .purple {
+	text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+}
 .teal {
 	background: $teal;
 }
