--- a/app/views/invitations/index.html.haml
+++ b/app/views/invitations/index.html.haml
@@ -33,5 +33,5 @@
       %div{style: 'margin: 10px 0;'}
         = link_to "Check out Jupiter's Features", signout_path, class: "btn btn-warning pull-right", id: "send-invites"
         = link_to "Invite more friends", '/invite_friends', class: 'btn pull-right', style: "margin-right: 15px;"
-        = link_to "Questions? Email us at hello@jupiterapp.com", "mailto:hello@jupiterapp.com", class: "btn btn-link orange-text pull-right"
+        = link_to "Questions? Email us at hello@getjupiterapp.com", "mailto:hello@jupiterapp.com", class: "btn btn-link orange-text pull-right"
         .clearfix
